2004-07-21  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b5

	* Fix: Cancel did not work in create user.

	* Fix: Default language was not used for new users.

	* Change: Added $ Id $

	* Change: Modified HowTo and Changelog a very little.

	* Change: Added little description to block-random.php

2004-07-20  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-RC3-cvs-b4

	* Fix: phpBB2 integration for the upload applet now works.

2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b3

        * Change: Check for fitToWindow before outputting the 'onclick'
          attribute in view_photo.

2004-07-20  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b2

	* Fix: Adapted contrib/phpBB2/modules.php to fit with phpBB2 2.0.9/10
	       and Register Globals ON.

2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b1

        * Change: Since we no longer do shutterfly donations, 
          $gallery->app->default["print_photos"] can end up being ""
          which causes the key() in view_photo to fail.  This prevents
          the error message from key() and prevents printing of a blank
          print href.

2004-07-18  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC2

	* 1.4.4-RC2 Release

2004-07-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b22

	* Change: Minor fix for view_album optimizations

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b21

        * Change: Revert last change to album_permissions

        * Change: Fix PHP5 - they stopped using the old-style GET and POST
          globals, and have switched to SuperGlobals only.  A couple session
          and form functions needed adapting.

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b20

        * Change: album_permissions - if $gallery->album is not set, but
          set_albumName is, load it.

2004-07-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b19
